--- a/containers/dockerfile
+++ b/containers/dockerfile
@@ -1,2 +1,11 @@
 FROM nginx:latest
 
+COPY config.conf /etc/nginx/nginx.conf
+
+COPY content /home
+
+RUN chmod 777 /etc/nginx/nginx.conf
+
+CMD [ "nginx", "-g", "daemon off;" ]
+
+
