--- a/containers/config.conf
+++ b/containers/config.conf
@@ -14,7 +14,8 @@ http {
 
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
+                      '"$http_user_agent" "$http_x_forwarded_for"'
+                      '"===> $uri |"';
 
     access_log  /var/log/nginx/access.log  main;
 
@@ -30,10 +31,12 @@ http {
     server {
 	listen 8080;
 
-	root /home;
-    index   index.html;
-
-
+    root /home;
+    index  /home/index.html;
+    location / {
+        try_files $uri $uri/ /index.html;
+    }
+    error_page  404 /index.html;
 }
 
 
