sign in form update

--- a/containers/config.conf
+++ b/containers/config.conf
@@ -31,12 +31,15 @@ http {
     server {
 	listen 8080;
 
-    root /home;
-    index  /home/index.html;
+    root /home/content;
+    index  index.html;
     location / {
         try_files $uri $uri/ /index.html;
     }
     error_page  404 /index.html;
+    location = /index.html {
+        internal;
+    }
 }
 
 
